force-app/main/default/objects/Product_in_Event__c/Product_in_Event__c.object-meta.xml
<CustomObject>
    <label>הוצאות כספיות</label>
    <nameField>
        <displayFormat>PIE-{00000}</displayFormat>
        <label>קוד הוצאות כספיות</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>הוצאות כספיות</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>