force-app/main/default/objects/Product_in_Event__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>הערות</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>