force-app/main/default/objects/Product_in_Event__c/fields/Different_Price__c.field-meta.xml
<CustomField>
    <fullName>Different_Price__c</fullName>
    <label>מחיר משתנה</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>