force-app/main/default/objects/Product_in_Event__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>כרטיס אירוע</label>
    <referenceTo>Incident_Report__c</referenceTo>
    <relationshipLabel>הוצאות כספיות</relationshipLabel>
    <relationshipName>ProdcutsinEvent2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>