force-app/main/default/objects/Product_in_Event__c/fields/FinalPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalPrice__c</fullName>
    <label>מחיר סופי</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>