force-app/main/default/objects/Product_in_Event__c/fields/Local_Rescue_Team_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Local_Rescue_Team_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>חשבונית מצוות חילוץ מקומי</label>
    <type>Checkbox</type>
</CustomField>