force-app/main/default/objects/Product_in_Event__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>שולם</label>
    <type>Checkbox</type>
</CustomField>