force-app/main/default/objects/Product_in_Event__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <formula>If  ((Paid__c = TRUE) , FinalPrice__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סכום שולם</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>