force-app/main/default/objects/Product_in_Event__c/fields/Paid_by_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Paid_by_Insurance_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>שולם למגנוס מחברת הביטוח</label>
    <type>Checkbox</type>
</CustomField>