force-app/main/default/objects/Product_in_Event__c/fields/Paid_by_Magnus_to_Local_Rescue_Team__c.field-meta.xml
<CustomField>
    <fullName>Paid_by_Magnus_to_Local_Rescue_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>שולם ממגנוס לצוות חילוץ מקומי</label>
    <type>Checkbox</type>
</CustomField>