force-app/main/default/objects/Product_in_Event__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>Product__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מחיר</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>