force-app/main/default/objects/Product_in_Event__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מוצר</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>ProdcutsinEvent2</relationshipName>
    <type>Lookup</type>
</CustomField>