force-app/main/default/objects/Product_in_Event__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <defaultValue>true</defaultValue>
    <label>מע&quot;מ</label>
    <type>Checkbox</type>
</CustomField>