force-app/main/default/objects/Product_in_Event__c/recordTypes/RecordType.recordType-meta.xml
<RecordType>
    <fullName>RecordType</fullName>
    <active>true</active>
    <label>הוצאות כספיות</label>
</RecordType>